<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="kakao_app_key">0ab7f8b3a68042828289b474034fc6df</string>
    <string name="kakao_scheme">kakao0ab7f8b3a68042828289b474034fc6df</string>
    <string name="facebook_app_id">920789971342596</string>
    
     <string name="kakaolink_host">kakaolink</string>
    <string name="newTag">New!</string>
    <string name="network_error">네트워크가 연결되어 있지 않습니다. 네트워크 상태를 확인 해 주세요.</string>
    <string name="popup_text_button_tag">a</string>
    <string name="popup_text_button_value_tag">b</string>

    <!-- 슬라이드 메뉴 텍스트 내용들 -->

    <string name="slidemenu_home">홈</string>
    <string name="slidemenu_alarm">알람 설정</string>
    <string name="slidemenu_statistics">내 통계보기</string>
    <string name="slidemenu_myinfo">내 정보 보기</string>
    <string name="slidemenu_invite">친구 초대하기</string>
    <string name="slidemenu_comunite">게시판</string>

    <!-- TTS -->
    <string name="msg_not_support_lang">This language does not support.</string>

    <!-- 통계 부분 텍스트 내용들 -->

    <string name="statistics_total_days">접속 일수</string>
    <string name="statistics_total_count">총 단어수</string>
    <string name="statistics_lock_count">지난 일주일동안 연횟수</string>
    <string name="statistics_popup_count">지난 일주일동안 받은 횟수</string>
    <string name="statistics_note_known_word">아는 단어수</string>
    <string name="statistics_note_unknown_word">모르는 단어수</string>
    <string name="silent_alarm_summary">Silent</string>
    <string name="default_label">Alarm</string>
    <string name="app_name">밀당영단어</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 로그인/가입 -->
    <string name="content_description_baasio_logo">baas.io</string>
    <string name="error_invalid_email">이메일 주소를 확인해주세요.</string>
    <string name="error_length_email">이메일 주소는 8~40자 입니다.</string>
    <string name="error_invalid_name">이름을 확인해주세요.</string>
    <string name="error_invalid_password">비밀번호는 6~15자 입니다.</string>
    <string name="error_invalid_grant">이메일 주소 또는 비밀번호를 확인해주세요.</string>
    <string name="error_already_exist">이미 가입된 사용자입니다.</string>
    <string name="error_signin_facebook">Facebook 로그인에 실패하였습니다.</string>
    <string name="error_signup_facebook">Facebook 가입에 실패하였습니다.</string>
    <string name="msg_signup_fail">가입에 실패하였습니다. \n잠시후에 다시 시도해 주세요.</string>
    <string name="msg_signin_success">로그인 되었습니다.</string>
    <string name="msg_signup_success">가입에 성공하셨습니다.</string>
    <string name="msg_finish_back_bt">뒤로버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="hint_email">이메일 주소</string>
    <string name="sign_up_email">이메일로 가입하기</string>
    <string name="hint_confirm_password">현재 비밀번호</string>
    <string name="hint_edit_password">변경할 비밀번호</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_firstname">이름</string>
    <string name="hint_gender">성별</string>
    <string name="hint_school">학교</string>
    <string name="hint_birth">생년월일(870101)</string>
    <string name="label_need_signup">회원가입</string>
    <string name="label_update">업데이트</string>
    <string name="label_notice">공지사항</string>
    <string name="label_use">이용약관</string>
    <string name="label_already_signuped"> 로 그 인 </string>
    <string name="label_confirm">로그인</string>
    <string name="label_logout_confirm">로그아웃</string>
    <string name="label_eidt_password">비밀번호 변경</string>
    <string name="label_tems_for_use">이용약관</string>
    <string name="label_tems_for_personal_info">개인정보 취급약관</string>
    <string name="label_send_qna">문의하기</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>

    <string-array name="title_array">
        <item>AAAA</item>
        <item>BBBB</item>
        <item>CCCC</item>
        <item>DDDD</item>
        <item>EEEE</item>
        <item>FFFF</item>
    </string-array>

    <string name="title_prompt">문의 유형 선택</string>

    <!-- feedback 텍스트 내용 -->
    <string name="day_avreage">일일 평균\n사용시간</string>
    <string name="day_goal">(오늘의)\n목표 달성률</string>
    <string name="all_memorize_word">총 암기 단어</string>
    <string name="forgetting_curve_analyze">망각곡선 분석</string>
    <string name="review_word">복습할 단어</string>
    <string name="forgetting_">망각곡선 측정률</string>
    <string name="notice_forgetting_curve">망각 곡선 완성도가 높을수록\n정확한 복습단어가 추출됩니다.</string>
    <string name="wordbook_1">1등급 단어장</string>
    <string name="wordbook_23">2-3등급 단어장</string>
    <string name="wordbook_45">4-5등급 단어장</string>
    <string name="wordbook_67">6-7등급 단어장</string>
    <string name="wordbook_89">8-9등급 단어장</string>
    <string name="memorize">을 암기중입니다.</string>
    <string name="memorize_word_count">외운 단어 수</string>
    <string name="title_activity_myinfo">MyinfoActivity</string>
    <string name="title_activity_book_list">BookListActivity</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="title_activity_main_activitya">MainActivitya</string>
    <string name="title_activity_review_tutorial">ReviewTutorialActivity</string>
    <string name="title_activity_kakao_login">KakaoLoginActivity</string>
    <string name="title_activity_screen_popup">ScreenPopupActivity</string>

    <!-- 오류보고서 텍스트 내용 -->
    <string name="crash_toast_text">Crash 발생 시 2초간 띄우는 토스트 메시지</string>
    <string name="crash_dialog_title">Dialog 제목</string>
    <string name="crash_dialog_text">Diaolg 내용</string>
    <string name="crash_dialog_comment_prompt">User_Comment위에 들어갈 말</string>
    <string name="crash_dialog_ok_toast">로그 전송버튼 누른 후 띄울 토스트</string>
    <string name="title_activity_before_hit">BeforeHitActivity</string>
    <string name="title_activity_last_install">LastInstallActivity</string>
    <string name="install_middle_title">중학생이시네요!</string>
    <string name="install_middle_contents">아직 고등학생도 아니신데 대단한 의지를 갖고 계시네요. 제가 볼 때 이런 의지만 유지하시면 서울대입니다.^^\n\n그럼 수능 단어 마스터하러 가볼까요?</string>
    <string name="install_high_1_title">고1이시네요!</string>
    <string name="install_high_1_contents">고3이 됐을 땐 단어가 시간 잡아 먹을 일 없도록 제가 책임지겠습니다.\n\n그럼 시작해 볼까요?</string>
    <string name="install_high_2_title">고2시네요!</string>
    <string name="install_high_2_contents">단어 마스터하기에 딱 좋은 시기입니다. 고3땐 단어로 씨름하지 않도록 제가 책임질게요!^^\n\n그럼 시작해 볼까요?</string>
    <string name="install_high_3_title">아, 고3이시네요?</string>
    <string name="install_high_3_contents">제가 책임지고 수능 당일에 모르는 단어가 없도록 도와드릴게요!\n\n그럼 수능 단어 마스터하러 가볼까요?</string>
    <string name="install_n_title">N수생이신가요?</string>
    <string name="install_n_contents">이번 수능에서 최고의 결과를 얻고 목표를 이룰 수 있도록 제가 도와드릴게요!\n\n그럼 시작해 볼까요?</string>

    <!-- 코치멘트 관령 내용 -->
    <string name="main_feedback_first_will_coach">님의 의지를\n확인해보세요.</string>
    <string name="main_feedback_second_will_coach">님의 의지가\n나날이 강해지고 있어요</string>
    <string name="main_feedback_third_will_coach">님의 의지가\n흔들리고 있어요.\n오늘부터 다시 불태워 볼까요~!?</string>
    <string name="main_feedback_first_memory_coach">망각곡선의 완성도가\n높을수록 정확한 복습단어가\n추출됩니다.</string>
    <string name="main_feedback_second_memory_coach_1">망각곡선을 완성시키기\n위해서는</string>
    <string name="main_feedback_second_memory_coach_2">개의 단어를\n더 외워야합니다.</string>
    <string name="main_feedback_third_memory_coach">망각곡선 측정이 완료되었습니다.\n추출된 복습단어를\n꼭 확인해주세요.</string>
    <string name="main_feedback_basic_hit_coach">2016학년도 수능은,\n평년 대비 지문의 길이가 길고,\n단어의 난이도도 높았습니다.</string>
    <string name="main_feedback_new_hit_coach">가\n업데이트 되었습니다.</string>
    
    
    <string name="setexam_typeA">이전 시험<![CDATA[(]]>lastexamdate<![CDATA[)]]> 이후\n새롭게 외운 단어로만 시험보기</string>
    <string name="setexam_typeB">현재 단어장<![CDATA[(]]>myvoca<![CDATA[)]]> 내\n외운 모든 단어로 시험보기</string>
    <string name="setexam_typeC">지금까지 외운\n모든 단어로 시험보기</string>
    <string name="examresult_content1">문항수 20 <![CDATA[/]]> 정답 12 <![CDATA[/]]> 오답 8 <![CDATA[/]]> 정답률 60 <![CDATA[%]]></string>
    <string name="examresult_frequencycount1">EBS 23회 / 수능 102회 / 평가원 11회</string>
     <string name="examresult_content">문항수 questioncount <![CDATA[/]]> 정답 correctcount <![CDATA[/]]> 오답 incorrectcount <![CDATA[/]]> 정답률 correctrate <![CDATA[%]]></string>
   
    <string name="async_errormessage">Error Message : msg</string>
    <string name="async_error">잠시후 다시 시도하세요.</string>
    <string name="async_error_exam">시험을 다시 보내주세요.</string>
    
    
    <string name="examresult_question">number<![CDATA[.]]> questionword</string>
    <string name="examresult_frequencycount">EBS frequencyEBS회 / 수능 frequencySN회 / 평가원 frequencyPGW회</string>
    <string name="examresult_forgetrate">암기확률  forgetrate<![CDATA[%]]></string>
    
    
    

</resources>