<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddffffff"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginLeft="18dp" android:layout_marginTop="18dp"
        android:text="통계" android:textSize="18sp" />

    <LinearLayout android:id="@+id/ll_word_graph"
        android:layout_width="fill_parent" android:layout_height="18dp"
        android:layout_margin="13dp"
        android:orientation="horizontal"
        android:weightSum="30" >

        <LinearLayout android:id="@+id/ll_1"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_weight="15"
            android:background="#cc00aa00"
            android:orientation="horizontal" />

        <LinearLayout android:id="@+id/ll_2"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_weight="15"
            android:background="#cc0000aa"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/statistics_total_count"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/tv_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:text="@string/statistics_note_known_word"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/tv_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:text="@string/statistics_note_unknown_word"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/tv_33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp" />
    </LinearLayout>
</LinearLayout>